--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.1",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
