--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Utkarsh Tiwari",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
